Final Project/Final Project/doc/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_25\bin\javadoc.exe
-sourcepath
H:\CSIII\Final Project
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;H:\CSIII\Final Project
-d
H:\CSIII\Final Project\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
-doctitle
Final Project
-windowtitle
Final Project
-author
-version
-nodeprecated
-package
-link
http://download.oracle.com/javase/8/docs/api/
H:\CSIII\Final Project/Runner.java
H:\CSIII\Final Project/Obstacle.java
H:\CSIII\Final Project/Friendly.java
H:\CSIII\Final Project/GameOver.java
H:\CSIII\Final Project/Character.java
H:\CSIII\Final Project/Attack.java
H:\CSIII\Final Project/Point.java
H:\CSIII\Final Project/TitleScreen.java
H:\CSIII\Final Project/MyStage.java
H:\CSIII\Final Project/Move.java
H:\CSIII\Final Project/Piece.java
H:\CSIII\Final Project/Enemy.java
H:\CSIII\Final Project/Block.java
H:\CSIII\Final Project/GameLogic.java
H:\CSIII\Final Project/Map.java
<---- end of javadoc command ---->
Loading source file H:\CSIII\Final Project\Runner.java...
Loading source file H:\CSIII\Final Project\Obstacle.java...
Loading source file H:\CSIII\Final Project\Friendly.java...
Loading source file H:\CSIII\Final Project\GameOver.java...
Loading source file H:\CSIII\Final Project\Character.java...
Loading source file H:\CSIII\Final Project\Attack.java...
Loading source file H:\CSIII\Final Project\Point.java...
Loading source file H:\CSIII\Final Project\TitleScreen.java...
Loading source file H:\CSIII\Final Project\MyStage.java...
Loading source file H:\CSIII\Final Project\Move.java...
Loading source file H:\CSIII\Final Project\Piece.java...
Loading source file H:\CSIII\Final Project\Enemy.java...
Loading source file H:\CSIII\Final Project\Block.java...
Loading source file H:\CSIII\Final Project\GameLogic.java...
Loading source file H:\CSIII\Final Project\Map.java...
Constructing Javadoc information...
H:\CSIII\Final Project\Runner.java:1: error: package mayflower does not exist
import mayflower.*;
^
H:\CSIII\Final Project\Friendly.java:1: error: package mayflower does not exist
import mayflower.*;
^
H:\CSIII\Final Project\Character.java:1: error: package mayflower does not exist
import mayflower.*;
^
H:\CSIII\Final Project\Character.java:2: error: cannot find symbol
public class Character extends Actor
                               ^
  symbol: class Actor
H:\CSIII\Final Project\MyStage.java:1: error: package mayflower does not exist
import mayflower.*;
^
H:\CSIII\Final Project\MyStage.java:4: error: cannot find symbol
public class MyStage extends Stage
                             ^
  symbol: class Stage
H:\CSIII\Final Project\Enemy.java:1: error: package mayflower does not exist
import mayflower.*;
^
H:\CSIII\Final Project\Block.java:1: error: package mayflower does not exist
import mayflower.*;
^
H:\CSIII\Final Project\Block.java:2: error: cannot find symbol
public class Block extends Actor
                           ^
  symbol: class Actor
H:\CSIII\Final Project\Map.java:1: error: package mayflower does not exist
import mayflower.*;
^
Standard Doclet version 1.8.0_25
Building tree for all the packages and classes...
Generating H:\CSIII\Final Project\doc\Attack.html...
Generating H:\CSIII\Final Project\doc\Block.html...
Generating H:\CSIII\Final Project\doc\Character.html...
Generating H:\CSIII\Final Project\doc\Enemy.html...
Generating H:\CSIII\Final Project\doc\Friendly.html...
Generating H:\CSIII\Final Project\doc\GameLogic.html...
Generating H:\CSIII\Final Project\doc\GameOver.html...
Generating H:\CSIII\Final Project\doc\Map.html...
Generating H:\CSIII\Final Project\doc\Move.html...
Generating H:\CSIII\Final Project\doc\MyStage.html...
Generating H:\CSIII\Final Project\doc\Obstacle.html...
Generating H:\CSIII\Final Project\doc\Piece.html...
Generating H:\CSIII\Final Project\doc\Point.html...
Generating H:\CSIII\Final Project\doc\Runner.html...
Generating H:\CSIII\Final Project\doc\TitleScreen.html...
Generating H:\CSIII\Final Project\doc\package-frame.html...
Generating H:\CSIII\Final Project\doc\package-summary.html...
Generating H:\CSIII\Final Project\doc\package-tree.html...
Generating H:\CSIII\Final Project\doc\constant-values.html...
Building index for all the packages and classes...
Generating H:\CSIII\Final Project\doc\overview-tree.html...
Generating H:\CSIII\Final Project\doc\index-all.html...
Building index for all classes...
Generating H:\CSIII\Final Project\doc\allclasses-frame.html...
Generating H:\CSIII\Final Project\doc\allclasses-noframe.html...
Generating H:\CSIII\Final Project\doc\index.html...
Generating H:\CSIII\Final Project\doc\help-doc.html...
Generating H:\CSIII\Final Project\doc\stylesheet.css...
10 warnings
